TestRepo2/src/objects/NABCA_Brand__c.object
<CustomObject>
    <description>We will store the National Alcohol Beverage Control Association brands data in this object</description>
    <fields>
        <fullName>Brand_Composite_Key__c</fullName>
        <description>External Id for Sales Record (Material Code + NABCA state code)</description>
        <externalId>true</externalId>
        <label>Brand Composite Key</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Common_Code__c</fullName>
        <label>Common Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Common_Description__c</fullName>
        <label>Common Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NABCA_Beverage_Type_Description__c</fullName>
        <label>NABCA Beverage Type Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NABCA_Category__c</fullName>
        <label>NABCA Category</label>
        <referenceTo>NABCA_Category__c</referenceTo>
        <relationshipLabel>NABCA Brands</relationshipLabel>
        <relationshipName>NABCA_Brands</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NABCA_IMP_DOM_IND_Description__c</fullName>
        <label>NABCA IMP DOM IND Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NABCA_Size_Description__c</fullName>
        <label>NABCA Size Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NABCA_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NABCA Vendor</label>
        <referenceTo>NABCA_Vendor__c</referenceTo>
        <relationshipLabel>NABCA Brands</relationshipLabel>
        <relationshipName>NABCA_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NABCA Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Common_Code__c</columns>
        <columns>Common_Description__c</columns>
        <columns>NABCA_Beverage_Type_Description__c</columns>
        <columns>NABCA_Category__c</columns>
        <columns>NABCA_Size_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NB-{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>NABCA Brand ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NABCA Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>